{
    "name": "Controls",
    "maps": [
        {
            "name": "Player",
            "id": "d85afe02-abf0-40e6-898d-d5893b6cfdd5",
            "actions": [
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "715f0040-b77d-4da6-a761-ef70b0f1feb0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "a72e8feb-c3b0-4269-9c9c-d2463a86ac82",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Spell_1",
                    "type": "Button",
                    "id": "29e35b64-d4e4-4daa-b15e-e5a55224d95a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Spell_2",
                    "type": "Button",
                    "id": "0b1ecd77-7cf2-4d0a-af3d-e602b2b5b036",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Spell_3",
                    "type": "Button",
                    "id": "456b3b48-f832-437d-8a86-5863dccf5f3e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "6639ad2f-3da0-4647-90ee-2e03e7defe00",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "9c60d59d-3115-4460-a320-b8c67f3527af",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f9144595-7bd2-4dbd-adb1-69f5c7da9640",
                    "path": "<Keyboard>/enter",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41f2037c-3abc-4673-827d-f4aefee3712d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4d57405-37e6-430f-9291-38308ec6db20",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56b034ed-5e39-4d21-8f72-d10d98376e80",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b95d16c3-6f5d-41f2-8529-c4c23fd2963e",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Spell_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "432975a8-1a26-42e9-acc2-49aca9644170",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Spell_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "676519a1-8854-461b-8632-067f8ed3b910",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Spell_1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7120a7fd-6ced-4c94-b13a-3213ad978c5a",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Spell_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee3614ce-a362-4b0a-9974-fe6ef36a7428",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Spell_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6a5c0c8-33b1-4412-8bc6-00c57db1971d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Spell_2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38d96267-e1c4-413e-a92f-60152cf4f45f",
                    "path": "<Keyboard>/space",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Spell_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a22c0d71-94b1-4114-be9b-6655d4ebaad4",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press(pressPoint=1,behavior=1)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Spell_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b578df7-5f00-43be-829f-8bec26b7afb4",
                    "path": "<Mouse>/middleButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Spell_3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector - Arrows",
                    "id": "c42d0e50-e089-41a9-972b-ae1afc409915",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c6ec2175-43b8-410e-acd9-8ccae49b28c2",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5a3117fe-03e4-4d06-ab64-176913bbb774",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "23d4af57-0f1f-45e6-bce8-1c340c15ef4d",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ca3870f6-358d-4525-9d78-b3283eccb165",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector - WASD",
                    "id": "6a918e0d-b0d4-4109-a23d-eae3aba004b2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1a07a9d5-30d2-4271-8334-fa7e31bd3c91",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "134cb510-b1fb-4254-a6b0-6e0df6d381cd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e052c0f4-d6f2-4929-b0e8-f8ebb92def18",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0d1fd496-1b3f-4c15-9adc-75132092c7f5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector - Arrows",
                    "id": "cb159a5c-4372-4a69-8616-88a9628eaaa8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b37172ce-65a3-4b93-9d93-9aa1984ce020",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "cb17a52d-d697-4631-8b5e-04bc41d48c05",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "39bb5636-421b-4574-b8f5-fc3f25430142",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "654403ea-66a4-41b6-93c6-ee98a22c8a99",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard + Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ac741a34-b8a6-46a2-b99c-a9e0ddc01b74",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b417c31b-9c52-43dd-9b7f-bd8a7aa24ad1",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone,InvertVector2(invertX=false)",
                    "groups": "Gamepad",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard + Mouse",
            "bindingGroup": "Keyboard + Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}